--- a/reconstruction.rmd
+++ b/reconstruction.rmd
@@ -20,15 +20,16 @@ Against the background of the sheer number of commodities and their distribution
 
 Online grocery shopping at [Tesco](https://www.tesco.com/groceries/?icid=dchp_groceriesshopgroceries), the largest supermarket chain in the UK, includes recommendations for further grocery purchases under the title of 'Have you forgotten?'. When Tesco customers shop for groceries online, a list of five recommendations appear at the checkout stage. The recommendations are the product of a recommender system, an important category of operational device in big data (see for instance [@Striphas_2015] for analysis of Netflix recommendation; [@Morris_2015]  or [@Seaver_2015] for an account of music recommendations).  The question 'have you forgotten?' is followed by a list of some  grocery items that could have been or are usually on a shopping list. The title of the suggestions is a bit misleading: the recommender system, as we will see, is not concerned with forgetting, with the many slips and oversights associated to which shopping is prone,  but rather with items that customers had not selected perhaps because they had never thought of buying them in the first place.
 
-[TBA: THIS PARA could be moved down] The shelves of large contemporary supermarket are the endpoint of global logistic supply chains, in all their logistical, value-transforming and brand-mediated hypercomplexity (see [@Neilson_2012; @Tsing_2009]).  Groceries imply a planetary geography of agriculture, industry, transport, communication and financialisation animated by flows of labour and capital. Encounters between this hyper-complex commodity-geography and people, even in the familiar confines of a supermarket, are no simple matter, either for shoppers or for supermarket operators such as Tesco.
 
 # C. Shopping  lists and  a theory of social ordering 
 
-The anthropologist  Daniel Miller has argued [@Miller_2012] that  shopping takes place as a negotiation of discrepancies between normative and actual social order (for instance, between ideals of health and commitments to thrift). What Miller suggests here is that ... [TBA]  It can also be seen  as a sacrificial ritual that re-instates social order in various ways. 
+The anthropologist  Daniel Miller has argued [@Miller_2012] that  shopping takes place as a negotiation of discrepancies between normative and actual social order (for instance, between ideals of health and commitments to thrift). What Miller suggests here is that shopping practices attempt to resolve difference between how people think they should live and how they actually live: 'we have to watch how shopping helps resolve these discrepancies between the normative and the actual, but we also need some ideas of where the normative comes from in the first place' [@Miller_2012, 72]. Whatever theory we have of how normative social order comes about, the key argument is that shopping inhabits a space between normative/idea and actual order. Importantly, and this will be a key consideration for recommender systems, shopping is not particularly personal or individual. Grocery shopping in particular intersects forms of social order concerning family and other forms of social grouping. 
 
 From an ethnomethodological standpoint, shopping lists provide important clues to how local social order is constituted, maintained, and repaired. Social ordering is done in shopping, and the shopping list as an inscriptive device stabilises certain forms of ordering at the expense of other possible orderings.  
 
-The shopping list, whether written on the back of an envelope, or saved as a list in an online grocery shopping system, lies at the intersection of logistical flows, infrastructural orderings, and  lively negotiations around actual and normative social orders.  Shopping lists, therefore  are intersectional ordering devices that encapsulates a universe of possible references, and a teeming multitude of propensities with an actual local order (in both senses of that term: an ordering and an imperative). As people shop, either by  trawling along aisles packed with thousands of products, or scrolling down screens or searching for particular brands amidst search results, lists inscribe some kind of order that filters or reduces the excessive propensities, claims, dazzle and distraction of commodities to the practicalities of domestic economy.
+The shopping list, whether written on the back of an envelope, or saved as a list in an online grocery shopping system, lies at the intersection of logistical flows, infrastructural orderings, and  lively negotiations around actual and normative social orders.[^30.1]  Shopping lists, therefore  are intersectional ordering devices that encapsulates a universe of possible references, and a teeming multitude of propensities with an actual local order (in both senses of that term: an ordering and an imperative). As people shop, either by  trawling along aisles packed with thousands of products, or scrolling down screens or searching for particular brands amidst search results, lists inscribe some kind of order that filters or reduces the excessive propensities, claims, dazzle and distraction of commodities to the practicalities of domestic economy.
+
+[^30.1]: The shelves of large contemporary supermarket are the endpoint of global logistic supply chains, in all their logistical, value-transforming and brand-mediated hypercomplexity (see [@Neilson_2012; @Tsing_2009]).  Groceries imply a planetary geography of agriculture, industry, transport, communication and financialisation animated by flows of labour and capital. Encounters between this hyper-complex commodity-geography and people, even in the familiar confines of a supermarket, are no simple matter, either for shoppers or for supermarket operators such as Tesco.
 
 Hand-written shopping lists undoubtedly have ongoing importance and display interestingly mixed ordering practices (see the montage of handwritten shopping lists at [Grocery List](http://www.grocerylist.org)). But online shopping lists take shape at the intersection of web and internet infrastructures, supply chain logistics, individualised practices and *habitus,* and increasingly, the predictive operations of  recommender systems. Just as the aisles and shelves of a supermarket present a densely-woven semiotics of objects competing for visual attention by offering distinctions of taste, thrift, expedience, novelty, indulgence, health and increasingly, online shopping recommender systems generate lists that seek to align people to commodities that they otherwise might have little relation to (see [@Turow_2015] for an overview).  
 
@@ -119,20 +120,38 @@ More importantly, the limited conditioning of probability of the association rul
 
 Predictive models are central technical elements in many big data arrangements because they provide a way of constructing conditional probabilities that incorporate more of the situation in which any propensity -- to purchase a bottle of Vueve Cliquot champagne for instance -- is inherent. In the new recommender system described by Patel, the business goal is to extend the list of the items customers have selected for purchase with  a few well-chosen items. In order to do this, the list of items selected for purchase will be extended by recommendations that have, according to a predictive model, the most chance of 'conversion'; that is, actual purchase. The predictive model carries the burden of calculating the conditional probability of purchase given everything known about the situation at this moment in time.  
 
-Patel introduced the new 'personal relevance model' with a data graphic familiar to machine learners and statistical modellers. (A sketch of her graph appears in Figure \@ref(fig:models).)  The graph plots the _precision_ -- the proportion of the recommended products that customers actually purchase -- for several different statistical models.  The graph indexes the 'causal efficacy' of the recommender system, its capacity to include and transform propensities or 'real potentialities' into operational events or purchases.  The graph compares the previous rule-based recommender systems with some of the relevancy-model alternatives -- logistic regression, random forests, gradient boosting and a few others -- in terms of their predictions and how those predictions turned out. Patel dismissed most of the models quite quickly and focused only on one, the logistic regression model, which did as well or slight other than other alternatives. 
+Patel introduced the new 'personal relevance model' with a data graphic familiar to machine learners and statistical modellers. (A sketch of her graph appears in Figure \@ref(fig:models).)  The graph plots the _precision_ -- the proportion of the recommended products that customers actually purchase -- for several different statistical models.  The graph indexes the 'causal efficacy' of the recommender system, its capacity to include and transform propensities or 'real potentialities' into operational events or purchases. Although she did not dwell on it, Patel used the graph to compare the previous rule-based recommender systems with some of the 'personal relevance model' alternatives -- logistic regression, random forests, gradient boosting and a few others -- in terms of their predictions and how those predictions turned out. Patel dismissed most of the models quite quickly and focused only on one, the logistic regression model, which did as well or slight other than other alternatives. 
 
 
-The models Patel so briefly mentioned are all 'classifiers,' predictive models that 'classify' particular outcomes by calculating their probability.  Much of the core architecture of the machine learning classifier models received scant reference in Patel's presentation. It is most likely that in DunnHumby's work, the classifying model at the heart of the recommender system constructs a decision boundary in vector space between points that belong to different classes of things [@Mackenzie_2015e]. The classes of things are binary: `recommended` or `not recommended,` and for many of the models shown in the graph, membership of a thing such as grocery to the binary classes are expressed as a probability.  The logistic regression model generates probabilities for each product for each customer. The crucial point here is that the shopping list written by the customer is extended, quasi-invisibly, in the recommender system to potentially any of the 250,000 items in the Tesco inventory.
+The models Patel so briefly mentioned are all 'classifiers,' predictive models that 'classify' particular events or outcomes by calculating their probability of membership of some class of event or outcome.  Much of the core architecture of the machine learning classifier models received scant reference in Patel's presentation. It is most likely that in DunnHumby's work, the classifier at the heart of the recommender system calculates for a given customer the most likely products to be purchased.  The classes of events are binary: `recommended` or `not recommended.` Products are allocated to one of these classes depending on their calculated probability. A probability greater than `0.5` typically would be `recommended.`  The logistic regression model generates probabilities of purchase for each product for each customer. 
 
-[HERE] 
-
-Patel did not articulate the implication of the contrast between the left and right hand side of the graphic. Although the statistical framing appears explicitly (e.g. in measuring the precision of  recommender systems), the underlying shift to a statistical model is barely mentioned.
+The crucial point here is that the shopping list written by the customer is extended, quasi-invisibly, in the recommender system to potentially any of the 250,000 items in the Tesco inventory. But the basis of this re-writing of the grocery list is an intricate conditional probability statement. Even if Patel assumed that the audience understood the working of the logistic regression model, the bulk of her presentation concerned the obstacles and problems that arise in trying to probabilise recommendations in ways that lead to the much-desired 'conversion events' or sales. 
 
 ## Repeating sufficiently often to measure
 
-52 weeks of data
-> in many kinds of events this is not the case, and the propensities cannot be measured because the relevant situation changes and cannot be repeated 17
+I will not discuss in detail the different dimensions of probabilisation implicit in the architecture of the new model. It is worthwhile, however, highlighting some key elements that point directly to the troubled notion of 'personal relevance' and personalization more generally. These include the problem of repetition, attempts to create new views of the data, experiments on the platform, and the temporalities of calculation.      
 
+One fundamental difficulty here is that the propensity of a customer to buy a recommended product at a particular point in time is changing. Popper's notion of probabilities as propensities as tendencies to realization inherent in a situation directly implies this.  Measuring propensities and expressing these measurements as numbers between `0` and `1` becomes difficult because the situation is change and the propensities themselves change. As Popper observes, 'the propensities cannot be measured because the relevant situation changes and cannot be repeated' [@Popper_1990, 17]. No doubt the contingencies associated with grocery shopping are legion, perhaps more so than other kinds of products (books, music, films),  and any attempt to measure propensities associated with particular commodities  will encounter many dynamic changes. 
+
+One way in which recommender systems attempt to address the problem of the relational dynamics of propensities is by looking for repetitions. Patel mentioned that the new model uses  '52 weeks of data' for each customer. In including this data in the model, the assumption is that the probability that a specific customer will buy a specific product will be shaped by previous purchases. The history of previous purchases constitutes forms of repetition that imply a stabilisation of propensities (high or low; e.g. a vegan customer will never have purchased chicken products, so the measured propensities for any of the 1000 or so chicken products sold be Tesco will remain close to `0`).     
+
+When the logistic regression model includes the 52 weeks of previous purchases, the conditional probability calculation undertaken by the recommender system ramifies tremendously in several respects. Each of Tesco's 200,000 products becomes a variable in the classifier. Practically, most of the these variables will not influence the calculation of the probabilities for recommendations very much. As Patel observed,  again assuming that this would be obvious to the audience of data scientists,  'we have lots of zeros'.  -- points to the difficult terrain of  'good feature' thinking: the vast, nearly empty matrix of customer-product associations. Given that most things in Tesco remain relatively unknown to each other and to customers. A matrix that records associations between individual people and different products is bound to be mostly empty. Say Tesco has 1 million online customers. Each online  shopper has bought some selection of the 200,000 products. The customer-product data matrix will be `r format(1e6 * 2e5)` in size.  The product-customer matrix, the basic vector-space in which all recommender systems operate, remains very sparse and unpopulated. Given that any one customer is likely to only have bought 100 or so different products, the probability matrix will be close to `r format(100-(100/2e5)*100, 2)`% empty. The data is, as Patel put it, 'massively unbalanced' (any dataset where the items of interest are much rarer than some normal values is said to be unbalanced) and such imbalance would heavily bias the recommender system towards common and only impersonally relevant suggestions, suggestions that might  not produce the desired conversion experience. 
+
+HERE
+
+```{r sparsity-ex, echo=FALSE, cache=TRUE, fig.margin=FALSE, fig.cap ='Sparsity of the customer-product association matrix' }
+library(ggplot2)
+library(reshape2)
+p = as.logical(rbinom(n=2e5, size=20,0.001 ))
+m = (matrix(p, nrow=1000, byrow=TRUE))
+melted <- melt(m)
+melted$value <- as.logical(melted$value)
+ggplot(melted, aes(x = Var2, y = Var1, fill = value)) + geom_tile() +
+    scale_fill_manual(values = c("grey", "red")) + xlab('Customer id') + ylab('Product id') + theme(legend.position='none')
+```
+
+Since so many people buy milk, the recommendation system might end up always recommending milk products. So the data needs to be 'corrected' by, as Patel reports, removing -- under-sampling -- some of the data for common purchases.   Secondly, even if a recommendation system finds uncommon items that are good recommendations, they should neither be too cheap ('low spend'), nor, as we will see too similar to what the customer has already ordered.
+ 
 ## Platform Experiments that reduce interfering propensities
 
 > experiments. ... by creating, at will, artificial conditions that either exclude, or reduce to zero, all the interfering and disturbing propensities 23
