--- a/reconstruction.rmd
+++ b/reconstruction.rmd
@@ -182,7 +182,17 @@ Whatever disturbing factors or interferences the experimental trials of differen
 
 There are two ways of reading this kind of statement. One is to see Popper as simply stating one of the consequencies of his physicalist understanding of probabilities as tendencies inherent in a situation. Another is to focus on the pivotal phrase 'possibilities trying to realize themselves' by asking what 'trying to realize' might mean. I would suggest that Patel's description of DunnHumby's work on the new personal relevance model is just such a 'trying to realize' in important ways.   
 
-HERE
+Several times, Patel emphasized the importance of 'constructing good features' from the data, and much of her presentation concerned different attempts to construct 'good features.' A 'feature' in the context of machine learning refers to a variable included in a predictive model. A 'good feature' is one that somehow improves the accuracy, precision, specificity or any of the panoply of measures applied to machine learning models in practice. I find it interesting that the main efforts that DunnHumby made to  construct good features were not closely associated with personhood, but with the relations -- the propensities -- between things.  
+
+Patel, for instance, described  the problem of 'basket similarity,' the problem that the recommender system might recommend something similar to items already in a customer's basket. A customer might be willing to substitute a similar item for something they have already chosen, but they are more likely to accept a recommendation for an item that complements rather than duplicates items in their list. 
+
+How could the recommender system sense the possible substitutions and complementaries between things for a given customer, especially since a person's sensibilities and susceptibilities concerning groceries will be subtly shaped by wider social groups, orderings and circumstances?  It could only do that by also modelling the relation between recommendations and items already ordered to construct a new feature from the data concerning how the substitutabilities and complementarities between product.  Taking all the baskets of items purchased, rather in the way that association rules does, a new feature, what DunnyHumby termed 'self-learning substitutes' was derived. The 'self learning substitutes' feature of the relevancy model draws on another data matrix, the product similarity matrix, itself generated from all previous recommendations that have led to conversion events (that is, 'a user clicked as the response'). A customer's recommendation list might already include `Tesco Ginger Nuts 300g.`   The 'self-learning substitution model' seeks to replace list items with similar but higher value items: `Mcvitie's Ginger Moments 400g.`
+
+This new feature is complex. Patel mentioned,  for instance, that it took the form of a 'design matrix of 14,000 columns.' This means that 14,000 new explanatory variables were added to the logistic regression model producing the recommendations. Each recommendation would be subtly re-weighted by this complex derived feature. The complexity of the model itself introduces new instabilities, new 'possibilities trying to realize themselves' and the DunnyHumby data scientists used  '`L1 regularization` to drive coefficients down to zero', or, put more simply, to exclude variables there were not contributing much to the predictions produced by the model. 
+
+Even this added feature, a complex addition in many respects, does not exhaust DunnHumby's attempts to re-shape the recommender system. They were just beginning, Patel reported, to address complementarities between things. `Nutella` complements `bananas,` but the converse is not necessarily true since `bananas` need not complement `nutella,` especially if I have nut allergies.  From the standpoint of customer data science, Patel emphasised the operational significance of predicting complementarities:  'complementarity drives conversion.' Bringing the matrix of similarities expressed as numerical associations between products into the model improves the conversion of recommendations into purchases. 
+
+HERE 
 
 # F. Conclusion
 
