--- a/reconstruction.rmd
+++ b/reconstruction.rmd
@@ -34,7 +34,7 @@ This paper philosophically reconstructs [@Dewey_2017] an online grocery ordering
 
 Like some recent work in science and technology studies,  anthropology and media studies [@Marres_2017; @Marcus_2014; @Bogost_2012], through this combination of approaches,  the paper allows its own reconstruction to be provisionally shaped by an experiential encounter with the object it describes. At times, this mode of empirical philosophical engagement with its objects may well seem overly concerned with the technical minutiae of the groceries and recommender systems, and lacking in  sociological rigour or empirical evidence. With some forbearance on the part of readers, however, the main philosophical argument of the paper should resonate sociologically. It concerns social order, or the consistency and regularity of relating and acting amid a world in where probabilities and calculations based on probabilities play a more pervasive role.
 
-The main argument of the paper concerns how  probability operates in Big Data situations. While calculations of probability have  long-standing importance in many settings (insurance, medicine, experimental and field sciences, operations research, risk analysis, engineering design, public health,  economic modelling, etc.), probabilities have taken on a much thicker situational texture on digital platforms associated with the web and social media. In recent research and opinion on data practice, personalization has been seen as the linchpin of predictive modelling.  Big data discourse in its promissory mode  attributes potency to personalization: 'most important, using big data we hope to identify specific individuals rather than groups' [@Mayer-Schonberger_2013]. Similarly, Joseph Turow and co-authors conclude in their critical account of the transformation of retail space: 'through it all, knowingly and not, and away from the spotlights of fierce social debate, retailers are encouraging daily routines that accept data-driven personalization as a centrifugal public' [@Turow_2015, 476]. Analysis of internet filter bubbles and the growth of predictive platforms in industry and government make similar points [@Pariser_2011; @ONeil_2016].
+The main argument of the paper concerns how  probability operates in Big Data situations. While calculations of probability have  long-standing importance in many settings (insurance, medicine, experimental and field sciences, operations research, risk analysis, engineering design, public health,  economic modelling, etc.), probabilities have taken on a much thicker situational texture on digital platforms associated with the web and social media. In recent research and opinion on data practice, personalization has been seen as the linchpin of predictive modelling.  Big data discourse in its promissory mode  attributes potency to personalization: 'most important, using big data we hope to identify specific individuals rather than groups' [@Mayer-Schonberger_2013]. Similarly, Joseph Turow and co-authors conclude in their critical account of the transformation of retail space: 'through it all, knowingly and not, and away from the spotlights of fierce social debate, retailers are encouraging daily routines that accept data-driven personalization as a centrifugal public' [@Turow_2015, 476]. Analysis of internet filter bubbles and the growth of predictive platforms in industry and government make similar arguments [@Pariser_2011; @ONeil_2016a].
 
 The reconstruction of the recommender system suggests a different way of seeing predictive personalization by expanding the key underpinning notion of probability.  Probabilities in practice -- in this case, in recommender system -- diverge from probability theory and indeed from statistics as a science. Operational probabilities differ from epistemic probabilities in their position in the world, as part of infrastructures, transactions, and event-structures. Taking their complex siting into account, and accepting their _technical_ reality, we might come to understand operative probabilities along the lines of the philosopher of science Karl Popper understood as a 'world of propensities, as an unfolding process of realizing possibilities and of unfolding new possibilities' [@Popper_1990,19]. Given this understanding of operational probability, our understanding of what is enacted in contemporary data analytics, especially in association with platforms [@Gillespie_2010] where the operationality of probabilities are heightened,  might shift focus away from personalization.
 
