--- a/log.rmd
+++ b/log.rmd
@@ -590,8 +590,11 @@ or
 - DONE: print
 
 ## Mon 31 Jul 2017 11:47:42 BST
-- printing as docx. There are around 35 pages on manuscript. Plan for revision: 7 pages/day for one week; (7 hours)  go through referee reports again alongside the manuscript to put them in (2 hours); redo diagrams and references (3 hours), submission (1 hour). Total of about 12 hours. Might be to do about 6-7 hours this week.     
+- printing as docx. There are around 35 pages on manuscript. Plan for revision: 7 pages/day for one week; (5 hours); enter edits 5 hours;  go through referee reports again alongside the manuscript to put them in (2 hours); redo diagrams and references (3 hours), submission (1 hour). Total of about 16 hours. Might be to do about 6-7 hours this week.     
 - did 8 pages of revisions; and 20 edits
 
 ## Tue 01 Aug 2017 15:53:17 BST
 - did another 10 pages of revisions -- up to 51 edits  
+
+## Wed 02 Aug 2017 10:49:46 BST
+- reached page 27/31 in edits  on paper
